[package]
name = "transaction-fuzzer"
version = "0.1.0"
edition = "2021"
authors = ["Mysten Labs <eng@mystenlabs.com>"]
description = "Tool to fuzz the system with randomly generated transactions"
license = "Apache-2.0"
publish = false

[dependencies]
proptest = "1.1.0"
proptest-derive = "0.3.0"
rand = "0.8.5"
move-core-types.workspace = true
tokio = { workspace = true, features = ["full"] }

sui-core = { path = "../sui-core" }
sui-protocol-config = { path = "../sui-protocol-config" }
sui-types = { path = "../sui-types", features = ["fuzzing"] }


[dev-dependencies]
sui-core = { path = "../sui-core", features = ["test-utils"] }
sui-protocol-config = { path = "../sui-protocol-config" }
sui-types = { path = "../sui-types", features = ["test-utils"] }
